--- a/web/main/templates/main/appraisals_active.html
+++ b/web/main/templates/main/appraisals_active.html
@@ -17,7 +17,7 @@
 </thead>
 <tbody>
   {% for appraisal in appraisals_active %}
-  <tr class='activas {{appraisal.tasadorUser.id}}' id="tr_active-{{appraisal.id}}">
+  <tr class='activas {{appraisal.tasadorUser.id}}' id="tr_table_active-{{appraisal.id}}">
     <td>
       {{ appraisal.id }}
     </td>
