--- a/web/main/templates/main/appraisals_not_accepted.html
+++ b/web/main/templates/main/appraisals_not_accepted.html
@@ -16,7 +16,7 @@
 </thead>
 <tbody>
   {% for appraisal in appraisals_not_accepted %}
-  <tr class='not_accepted {{appraisal.tasadorUser.id}}' id="tr_not_accepted-{{appraisal.id}}">
+  <tr class='not_accepted {{appraisal.tasadorUser.id}}' id="tr_table_not_accepted-{{appraisal.id}}">
     <td>
       {{ appraisal.id }}
     </td>
