--- a/web/main/templates/main/appraisals_not_assigned.html
+++ b/web/main/templates/main/appraisals_not_assigned.html
@@ -16,7 +16,7 @@
 </thead>
 <tbody>
   {% for appraisal in appraisals_not_assigned %}
-  <tr class='activas {{appraisal.tasadorUser.id}}' id="tr_not_assigned-{{appraisal.id}}">
+  <tr class='activas {{appraisal.tasadorUser.id}}' id="tr_table_not_assigned-{{appraisal.id}}">
     <td>
       {{ appraisal.id }}
     </td>
@@ -94,7 +94,7 @@
         <span id='icon'>assignment</span>
         <div class="ld ld-ring ld-spin" style="display:none;"></div>
       </button>
-      <button type="button" data-id="{{appraisal.id}}" class="btn btn-dark btn-sm btn_delete_appraisal" style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
+      <button type="button" data-id="{{appraisal.id}}" class="btn btn-dark btn-sm btn_delete_appraisal_modal" style="font-family:Material Icons;font-size:1.0em;margin-bottom:1px;border:0px;">
         delete
       </button>
     </td>
