--- a/web/main/templates/main/modals_delete.html
+++ b/web/main/templates/main/modals_delete.html
@@ -14,6 +14,7 @@
       <form action="" method="post" id="form">
         {% csrf_token %}
         <input id="appraisal_id" name="appraisal_id" type="hidden" value="2">
+        <input id="source_table" name="source_table" type="hidden" value="2">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
         <button class="btn btn-primary ld-ext-right" id="btn_delete_appraisal" name="delete" value="a">
           Eliminar
