--- a/web/main/templates/main/appraisals_not_assigned.html
+++ b/web/main/templates/main/appraisals_not_assigned.html
@@ -4,40 +4,40 @@
   <tr>
     <th scope="col" style="width:1em">ID</th>
     <th scope="col" style="width:8em">Cliente</th>
-    <th scope="col" style="width:8em">Código</th>
+    <th scope="col" style="width:6.5em">Código</th>
     <th scope="col" style="width:1em;text-align:center;">T.</th>
     <th scope="col" style="width:19em;">Dirección</th>
     <th scope="col" style="width:11em;">Tasador</th>
     <th scope="col" style="width:11em;">Visador</th>
     <th scope="col" style="width:8em;">Creada</th>
     <th scope="col" style="width:8em;">Entrega</th>
-    <th scope="col" style="width:5em;"></th>
+    <th scope="col" style="width:4em;"></th>
   </tr>
 </thead>
 <tbody>
   {% for appraisal in appraisals_not_assigned %}
-  <tr class='activas {{appraisal.tasadorUser.id}}' id="tr_table_not_assigned-{{appraisal.id}}">
+  <tr class='not_assigned {{appraisal.tasadorUser.id}}' id="tr_table_not_assigned-{{appraisal.id}}">
     <td>
-      {{ appraisal.id }}
+      <small>{{ appraisal.id }}</small>
     </td>
-    <td>
-      {{ appraisal.solicitanteVerbose }}
+    <td class="solicitante">
+      {{ appraisal.solicitanteVerboseShort }}
     </td>
-    <td>
-      {{ appraisal.solicitanteCodigo }}
+    <td class="solicitanteCodigo">
+      <small>{{ appraisal.solicitanteCodigo }}</small>
     </td>
-    <td style="text-align:center;">
+    <td style="text-align:center;" data-toggle="tooltip" data-placement="top" title="{{appraisal.realEstate.get_propertyType_display}}">
       <i class="{{ appraisal.realEstate.get_propertyTypeIcon }}"></i>
     </td>
     <td>
-      <a href="{{appraisal.url}}">
+      <a href="{{appraisal.url}}" class="address">
         {{ appraisal.realEstate.addressVerboseNoRegion }}
       </a>
     </td>
     <td>
       <div class="row">
         <div class="col-auto">
-          <span style="vertical-align: middle;">
+          <span style="vertical-align: middle;" class="tasador">
           {% if appraisal.tasadorUser %}
             {{ appraisal.tasadorUser.first_name.0 }}. {{ appraisal.tasadorUser.last_name.strip }}
           {% else %}
@@ -58,7 +58,7 @@
     <td>
       <div class="row">
         <div class="col-auto">
-          <span style="vertical-align: middle;">
+          <span style="vertical-align: middle;" class="visador">
           {% if appraisal.visadorUser %}
             {{ appraisal.visadorUser.first_name.0 }}. {{ appraisal.visadorUser.last_name.strip }}
           {% else %}
