--- a/web/appraisal/templates/appraisal/modals.html
+++ b/web/appraisal/templates/appraisal/modals.html
@@ -1,3 +1,24 @@
+<div class="modal fade" id="modal_assign_tasador" tabindex="-2" role="dialog" aria-hidden="true">
+  {% include 'main/modals_assign_tasador.html' %}
+</div>
+
+<div class="modal fade" id="modal_assign_visador" tabindex="-2" role="dialog" aria-hidden="true">
+  {% include 'main/modals_assign_visador.html' %}
+</div>
+
+<div class="modal fade" id="modal_edit_address" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_edit_address.html' %}
+</div>
+
+<div class="modal fade" id="modal_add_address" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_add_address.html' %}
+</div>
+
+<div class="modal fade" id="modal_remove_address" tabindex="-1" role="dialog" aria-hidden="true">
+  {% include 'appraisal/modals_remove_address.html' %}
+</div>
+
+
 <div class="modal fade" id="modalExport" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
