--- a/web/appraisal/templates/appraisal/realestate_value_assets.html
+++ b/web/appraisal/templates/appraisal/realestate_value_assets.html
@@ -686,16 +686,20 @@
 
   function assetsTableComputeTotalsGlobal() {
     var sumPesos = 0
+    /*
     if (!{{realestate.is_apartment}}) {
       sumPesos += parseFloatEs($('#id_ptotalTerrPesos').text().trim());
     }
+    */
     sumPesos += parseFloatEs($('#id_ptotalConstPesos').text().trim());
     sumPesos += parseFloatEs($('#id_ptotalAssetsPesos').text().trim());
 
     var sumUF = 0
+    /*
     if (!{{realestate.is_apartment}}) {
       sumUF += parseFloatEs($('#id_ptotalTerrUF').text().trim());
     }
+    */
     sumUF += parseFloatEs($('#id_ptotalConstUF').text().trim());
     sumUF += parseFloatEs($('#id_ptotalAssetsUF').text().trim());
 
@@ -730,15 +734,17 @@
   }
 
   function assetsTableComputeTotals() {
-    if (!{{realestate.is_apartment}}) {
-      assetsTableComputeTotalsTerrains();
-    }
+
+    //if (!{{realestate.is_apartment}}) {
+    //  assetsTableComputeTotalsTerrains();
+    //}
     assetsTableComputeTotalsConstructions();
     assetsTableComputeTotalsAssets();
     assetsTableComputeTotalsGlobal();
   }
 
   function assetsTableUpdateRows() {
+    /*
     if (!{{realestate.is_apartment}}) {
       $('#table_terrains tr').each(function() {
         if ($(this).hasClass('tr_terrain')) {
@@ -751,6 +757,7 @@
         }
       });
     }
+    */
     $('#table_constructions tr').each(function() {
       uf = UF_IN_PESOS;
       area = parseFloat($(this).find(".td_area").find('input').val());
