--- a/web/main/templates/main/appraisals.html
+++ b/web/main/templates/main/appraisals.html
@@ -1,25 +1,8 @@
-<!--
-<script>
-  function timeCreated(string) {
-    var s = moment(string).format("D MMM HH:MM");
-    document.write(s)
-  }
-</script>
 
-<script>
-  function timeLeft(string) {
-    var m = moment(string);
-    document.write(m.fromNow());
-  }
-</script>
+{% load static %}
 
-<script>
-  function timeFinished(string) {
-    var s = moment(string).format("D MMM HH:MM");
-    document.write(s)
-  }
-</script>
--->
+<script src="{% static "main/js/modal_assign_tasador.js" %}" type="text/javascript"></script>
+<script src="{% static "main/js/modal_assign_visador.js" %}" type="text/javascript"></script>
 
 {% load custom_tags %}
 
@@ -373,145 +356,18 @@
     // --------------------------------------------------------------------------------------------
     // Assign functions are called in the 'not_assigned' table, when
     // the corresponding buttons are clicked.
-
-    $(".btn_assign_tasador_modal").unbind()
-    $(".btn_assign_tasador_modal").off()
-    $(".btn_assign_tasador_modal").on("click", function (event) {
-      // Assigns to a hidden input in the tasador modal the value of the
-      // appraisal, to have in the post request.
-      var url = "{% url 'ajax_assign_tasador_modal_url' %}";
-      var appraisal_id = $(this).val();
-      $("#modal_assign_tasador").find("#ld-alert").show();
-      $("#modal_assign_tasador").find("#table").hide();
-      $("#modal_assign_tasador").find("#tasador_buscar").hide();
-      $("#modal_assign_tasador").modal('show');
-      $.ajax({
-        url: url,
-        type: 'get',
-        data: {'appraisal_id':appraisal_id},
-        error: function () {
-          alert("Error al desplegar modal de tasador.");
-          $("#modal_assign_tasador").modal('hide');
-          return false;
-        },
-        success: function (data) {
-          $("#modal_assign_tasador").html(data)
-          $("#modal_assign_tasador").find("#ld-alert").hide();
-          $("#modal_assign_tasador").find("#tasador_buscar").show();
-          $("#modal_assign_tasador").find("#table").show();
-          $('#modal_assign_tasador_appraisal_id').val(appraisal_id);
-          assignTableActions();
-        }
-      });
-    });
-
-    $("#btn_assign_tasador").unbind()
-    $("#btn_assign_tasador").off()
-    $("#btn_assign_tasador").on("click", function (event) {
-      // Button clicked in the modal. Call an AJAX to assign a tasador
-      // to the appraisal, and returns the 'not_accepted' table back,
-      // to be replaced.
-      var url = "{% url 'ajax_assign_tasador_url' %}";
-      var appraisal_id = $('#modal_assign_tasador_appraisal_id').val();
-      var formData = $('#form_assign_tasador').serialize();
-      btn = $(this)
-      btn.addClass('running')
-      btn.prop('disabled', true);
-      $.ajax({
-        url: url,
-        type: 'post',
-        data: formData,
-        error: function () {
-          alert("Error al asignar tasador.");
-          $(this).removeClass('running')
-          $(this).prop('disabled', false);
-          return false;
-        },
-        success: function (data) {
-          removeRow("table_not_assigned",appraisal_id)
-          replaceTable("table_not_accepted",data)
-          assignTableActions()
-          $("#modal_assign_tasador").modal('hide')
-          btn.removeClass('running')
-          btn.prop('disabled', false);
-        }
-      });
-    });
-
-    $(".btn_assign_visador_modal").unbind()
-    $(".btn_assign_visador_modal").off()
-    $(".btn_assign_visador_modal").on("click", function (event) {
-      // Assigns to a hidden input in the tasador modal the value of the
-      // appraisal, to have in the post request.
-      var url = "{% url 'ajax_assign_visador_modal_url' %}";
-      var appraisal_id = $(this).val();
-      var source_table = $(this).closest('table').attr('id');
-      $("#modal_assign_visador").find("#ld-alert").show();
-      $("#modal_assign_visador").find("#table").hide();
-      $("#modal_assign_visador").find("#visador_buscar").hide();
-      $("#modal_assign_visador").find("#alert_already_chosen").hide()
-      $("#modal_assign_visador").modal('show');
-      $.ajax({
-        url: url,
-        type: 'get',
-        data: {'appraisal_id':appraisal_id},
-        error: function () {
-          alert("Error al desplegar modal de visador.");
-          $("#modal_assign_visador").modal('hide');
-          return false;
-        },
-        success: function (data) {
-          $("#modal_assign_visador").html(data)
-          $("#modal_assign_visador").find("#ld-alert").hide();
-          $("#modal_assign_visador").find("#table").show();
-          $("#modal_assign_visador").find("#visador_buscar").show();
-          $("#modal_assign_visador_appraisal_id").val(appraisal_id);
-          $("#modal_assign_visador_source_table").val(source_table);
-          assignTableActions();
-        }
-      });
-    });
+    ajax_assign_tasador_modal_url = "{% url 'ajax_assign_tasador_modal_url' %}";
+    ajax_assign_visador_modal_url = "{% url 'ajax_assign_visador_modal_url' %}";
+    ajax_assign_tasador_url = "{% url 'ajax_assign_tasador_url' %}";
+    ajax_assign_visador_url = "{% url 'ajax_assign_visador_url' %}";
+    btn_assign_tasador_modal();
+    btn_assign_visador_modal();
+    btn_assign_tasador();
+    btn_assign_visador();
 
     $(".visador_radio").on( "click", function() {
       $("#modal_assign_visador").find("#alert_already_chosen").hide()
     })
-
-    $("#btn_assign_visador").unbind()
-    $("#btn_assign_visador").off()
-    $("#btn_assign_visador").on("click", function (event) {
-      // Button clicked in the modal. Call an AJAX to assign a visador
-      // to the appraisal, and returns the 'not_assigned' table back,
-      // to be replaced.
-      var source_table = $('#modal_assign_visador_source_table').val();
-      var url = "{% url 'ajax_assign_visador_url' %}";
-      var formData = $('#form_assign_visador').serialize();
-      var current_visador_id = $("#modal_assign_visador_appraisal_visador_id").val();
-      if ($("input:checked").val() == current_visador_id) {
-        $("#modal_assign_visador").find("#alert_already_chosen").show()
-      } else {
-        $("#modal_assign_visador").find("#alert_already_chosen").hide()
-        $(this).addClass('running')
-        $(this).prop('disabled', true);
-        $.ajax({
-          url: url,
-          type: 'post',
-          data: formData,
-          error: function () {
-            alert("Error al asignar visador.");
-            $(this).removeClass('running')
-            $(this).prop('disabled', false);
-            return false;
-          },
-          success: function (data) {
-            replaceTable(source_table,data)
-            assignTableActions()
-            $("#modal_assign_visador").modal('hide')
-            $("#modal_assign_visador").find("#btn_assign_visador").removeClass('running')
-            $("#modal_assign_visador").find("#btn_assign_visador").prop('disabled', false);
-          }
-        });  
-      }
-    });
 
     // --------------------------------------------------------------------------------------------
     // Unassign functions are available in the 'active' table, to unassign
@@ -626,35 +482,35 @@
     if (appraisals_not_assigned_n > 0) {
       $("#table_not_assigned").toggle()
     } else {
-      $("#div_alert_not_assigned").toggle()
+      $("#div_alert_table_not_assigned").show()
     }
 
     appraisals_not_accepted_n = {{appraisals_not_accepted|length}}
     if (appraisals_not_accepted_n > 0) {
       $("#table_not_accepted").toggle()
     } else {
-      $("#div_alert_not_accepted").toggle()
+      $("#div_alert_table_not_accepted").toggle()
     }
 
     appraisals_active_n = {{appraisals_active|length}}
     if (appraisals_active_n > 0) {
       $("#table_active").toggle()
     } else {
-      $("#div_alert_active").toggle()
+      $("#div_alert_table_active").toggle()
     }
 
     appraisals_finished_n = {{appraisals_finished|length}}
     if (appraisals_finished_n > 0) {
       $("#table_finished").toggle()
     } else {
-      $("#div_alert_finished").toggle()
+      $("#div_alert_table_finished").toggle()
     }
 
     appraisals_imported_n = {{appraisals_imported|length}}
     if (appraisals_imported_n > 0) {
       $("#table_imported").toggle()
     } else {
-      $("#div_alert_imported").toggle()
+      $("#div_alert_table_imported").toggle()
     }
 
     // Actions.
